--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:        Project or Site name
 tagline:      A responsive theme for your project on GitHub Pages
-baseurl:      "chgzfls-cs-club"
+baseurl:      "/chgzfls-cs-club"
 paginate:     1
 locale:       "en"
 
