Update Main Page

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ locale:       "en"
 
 # About/contact
 author:
-  name:       Yutian Chen, Qingzi Shi
+  name:       GZFLS Computer Science Club
   url:        http://yourhomepage.com 
 
 # Gems
