Update USACO Posts, 7 solutions added. Add Background Picture

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:        CHGZFLS Computer Science Club
-tagline:      We Learn, We Create, We Share
+tagline:      We Learn &emsp; We Create &emsp; We Share
 baseurl:      "/chgzfls-cs-club"
 paginate:     1
 locale:       "en"
