More USACO Analysis, Fix URLs, Note Main Page Gets Online

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:        CHGZFLS Computer Science Club
+title:        GW Computer Science Club
 tagline:      We Learn &emsp; We Create &emsp; We Share
 baseurl:      "/chgzfls-cs-club"
 paginate:     1
