update _config.yml. 修复 baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:        GW Computer Science Club
 tagline:      We Learn &emsp; We Create &emsp; We Share
-baseurl:      "/chgzfls-cs-club"
+baseurl:      ""
 paginate:     1
 locale:       "en"
 
