Compress sass > css, Move main.sass to /css, Remove Compile process for other sass files

--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,8 @@ gems:
   - jekyll-paginate
 
 #Others
-markdown: kramdown
 
-usaco-post:
-  -
-    scope:
-      path: ""
-      values:
-        comments: true
+sass:
+    style: compressed
+
+markdown: kramdown
